<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yogeshkohli.yogesh_kohli_assignment_1.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textViewINR"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:gravity="center"
        android:text="@string/inr"
        android:textColor="@android:color/background_dark"
        android:textColorLink="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBaseline_toBaselineOf="@+id/inrEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/usdEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/usd_amount"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textViewUSD"
        app:layout_constraintTop_toBottomOf="@+id/convertButton" />

    <EditText
        android:id="@+id/inrEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/inr_amount"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/usdEditText"
        app:layout_constraintTop_toBottomOf="@+id/usdEditText" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="convertButtonClicked"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUSD"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:gravity="center"
        android:text="@string/usd"
        android:textColor="@android:color/background_dark"
        android:textColorLink="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBaseline_toBaselineOf="@+id/usdEditText"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
